Safari class + navbar bug fix (#2525)
* add chaise-safari class to the html body element. Add styles to fix a navbar menu bug with scrollbars showing
* add function to windowRef so the utility file can be used for the interface and function(s)

--- a/src/assets/scss/_dropdown.scss
+++ b/src/assets/scss/_dropdown.scss
@@ -177,3 +177,8 @@
     }
   }
 }
+
+// rules specifically for safari
+@at-root .chaise-safari .chaise-dropdown.dropdown div.dropdown-menu {
+  z-index: auto;
+}
